--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,5 +36,5 @@ android {
 
 dependencies {
     implementation 'com.facebook.android:facebook-share:5.15.3'
-    implementation 'com.twitter.sdk.android:twitter:3.1.1' //twitter share
+    implementation 'com.github.HuukSocial:twitter-kit-android:f8303e2fe7' //twitter share
 }
